--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&family=Itim&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Texturina:wght@500&display=swap');
+
 body{
      /* background: url(/PetitionIsm/images/typewriter-801921_1920.jpg); */
     background: darkgoldenrod;
