--- a/src/app/dashboard/academicinfo/academicinfo.component.html
+++ b/src/app/dashboard/academicinfo/academicinfo.component.html
@@ -79,7 +79,7 @@
             </mat-card-header>
             <img mat-card-image src="../../../assets/images/sports3.jpg" alt="sports pic">
             <mat-card-content>
-              <p>
+              <p  class="card-text">
                 The Sports Authority is responsible for Physical Conditioning and day to day organisation of different activities related to sports & Yoga, Preparation of Team for competition, Activities related to wellness of campus children & others related to Sports and fitness training, Facilitate quality of equipment and fields/courts and Organisation of Intramural competitions including Annual Sports Meet, Inter Hostel General Championship & others.
               </p>
               <p>HEAD : Prof. xxxxx</p> 
@@ -104,7 +104,7 @@
             </mat-card-header>
             <img mat-card-image src="../../../assets/images/books-1204029_1920.jpg" alt="Library pic">
             <mat-card-content>
-              <p>
+              <p  class="card-text">
                 The Central Library of IIT(ISM) Dhanbad is the heart of the institute providing direct academic and research supports to all departments. It is an automated library in terms of records organisation and management of all its different sections, search and discovery, information retrieval and service delivery. The whole library operations run on LIBSYS integrated library management software. Over the years the library has developed several databases of books, journals, theses/ dissertations, conference proceedings, etc.
               </p>
               <p>HEAD : Prof. xxxxx</p> 
@@ -131,7 +131,7 @@
             </mat-card-header>
             <img mat-card-image src="../../../assets/images/jasper.jpg" alt="Library pic">
             <mat-card-content>
-              <p>
+              <p  class="card-text">
                 The Hostels of IIT (ISM) Dhanbad have all the facilities of a world-class academic institute. Each hostel has its own history and unique facilities, but all of them have the basics i.e. a mess, a canteen, a juice center, a stationary shop, a TV room, an indoor sports room, and laundry facilities. There are 7 boys’ and 4 girls’ hostels. The hostels are considered to be its gems and are henceforth named on precious stones as Opal, Topaz, Sapphire, Diamond, Amber etc.
               </p>
               <p>HEAD : Prof. xxxxx</p> 
@@ -153,7 +153,7 @@
             </mat-card-header>
             <img mat-card-image src="../../../assets/images/mess hostel.jpg" alt="Library pic">
             <mat-card-content>
-              <p>
+              <p  class="card-text">
                 The Mess in IIT (ISM) Hostels on the campus consists of kitchen and dining hall. It is responsible for delivering timely food and eatables to the stdents and staffs of IIT(ISM) Dhanbad. Each hostel has its own mess. The authority follows a fixed schedule for food items on diferent days of the week.
               </p>
               <p>HEAD : Prof. xxxxx</p> 
@@ -175,7 +175,7 @@
             </mat-card-header>
             <img mat-card-image src="../../../assets/images/cultral2.jpg" alt="Library pic">
             <mat-card-content>
-              <p>
+              <p  class="card-text">
                 The institute hosts many fests including Srijan - The cultural fest of IIT (ISM), Concetto - The Tech-fest, Parakram - Games and sports fest, Basant - The alumni re-union, and Pratibimb - The inter departmental cultural fest. Apart from these the institute also hosts inter-house sports and cultural competitions and technical fests of various departments.
               </p>
               <p>HEAD : Prof. xxxxx</p> 
@@ -197,7 +197,7 @@
             </mat-card-header>
             <img mat-card-image src="../../../assets/images/hack.jpg" alt="techanical fest pic">
             <mat-card-content>
-              <p>
+              <p  class="card-text">
                 The institute hosts many technological fests including Concetto - The Tech-fest, Basant - The alumni re-union, and Hackfest - the Tech fest Apart from these the institute also hosts inter-house sports and cultural competitions and technical fests of various departments.
               </p>
               <p>HEAD : Prof. xxxxx</p> 
