--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -62,3 +62,18 @@
  
   </mat-card>
 </div>
+<br><br>
+<div class="container">
+<mat-card>
+  <h3>
+    Here You can share your thought with the whole College societies.
+  </h3>
+
+  <h3>
+    So, Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi soluta animi corrupti, id accusantium similique excepturi ipsam dignissimos quos quam ea quis reprehenderit voluptatem iusto, dolorem necessitatibus quisquam illum deserunt.
+  </h3>
+  <div class="buttonsection">
+  <button mat-raised-button color="primary">START PETITION</button></div>
+</mat-card>
+
+</div>
