--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<ngx-loading-bar [height]="'4px'" [includeSpinner]="false"></ngx-loading-bar>
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -31,7 +31,7 @@
             </li>
             <hr>
             <li>
-              <a href="#"><i class="fa fa-power-off"></i> Log Out</a>
+              <i class="fa fa-power-off"></i><button mat-raised-button color="warn" (click)="onLogout()"  >Log Out</button>
             </li>
           </ul>
         </div>
@@ -69,6 +69,8 @@
   </div>
 </nav>
 
+
+
 <div id="screen">
 
 <!-- <div class="container"> -->
@@ -79,3 +81,5 @@
 <!-- <div class="footer-section">
   <p>Copyright by Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt iusto, cupiditate </p>
 </div> -->
+
+
