--- a/src/app/dashboard/petition/petition.component.css
+++ b/src/app/dashboard/petition/petition.component.css
@@ -14,6 +14,7 @@
   padding: 3rem;
   color: #65f436;
   background: #1d4b4b;
+  font-family: 'Texturina', serif;
 }
 /* .example-form {
     min-width: 150px;
